Set-up our app packages and files!

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,30 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  #State Management
+  flutter_bloc:
+  #Code generator (mainly used with Cubit)
+  freezed:
+  freezed_annotation:
+  #Auto Converting code from and to JSON
+  json_serializable:
+  json_annotation:
+  #Networking
+  dio:
+  retrofit:
+  retrofit_generator:
+  pretty_dio_logger:
+  #localization
+  intl:
+  easy_localization:
+  #for Splash Screen of the App
+  flutter_native_splash:
+  #for SVG Format images and illustrations
+  flutter_svg:
+  #for Adaptive and Responsive UI and font
+  flutter_screenutil:
+
+
 
 dev_dependencies:
   flutter_test:
