- added api api constants, api service and error handler. - added AppRejex. - added di. - added login repo & cubit. - integrated with login EP. - added login validator.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   retrofit:
   retrofit_generator:
   pretty_dio_logger:
+  build_runner:
   #localization
   intl:
   easy_localization:
@@ -57,6 +58,8 @@ dependencies:
   flutter_svg:
   #for Adaptive and Responsive UI and font
   flutter_screenutil:
+  # dependency Injection
+  get_it: 
 
 
 
