- added Development & Production flavors for android - added launch.json for flavors config - change And app name

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,6 +58,20 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    flavorDimensions "default"
+
+    productFlavors {
+        development {
+            dimension "default"
+            resValue "string", "app_name", "Doc Doc Development"
+            applicationIdSuffix ".dev"
+        }
+          production {
+            dimension "default"
+            resValue "string", "app_name", "Doc Doc Production"
+        }
+    }
 }
 
 flutter {
