--- a/github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
+++ b/github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
@@ -1,4 +1,4 @@
-name: Android Fastlane with Firebase App Ditribution Workflow
+name: Android Fastlane with Firebase App Distribution Workflow
 
 on:
   push:
@@ -7,18 +7,18 @@ on:
 
 jobs:
   distribute_to_firebase:
-    runs-on: ubuntu-latest #FOR ANDROID ONLY -- // IOS: MAC OS
+    runs-on: ubuntu-latest
     steps:
-    - name: checkout my repo code
+    - name: Checkout my repo code
       uses: actions/checkout@v2
-
-    - name: set up Java JDK 11
+    
+    - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'temurin'
-
-    - name: install flutter
+    
+    - name: Install Flutter
       uses: subosito/flutter-action@v2
       with:
         channel: stable
@@ -26,14 +26,13 @@ jobs:
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-versin: "3.3.4"
+        ruby-version: "3.2.3"
         bundler-cache: true
-        working-directory: android  
-
-
+        working-directory: android
+        
     - name: Build and Distribute App
       env:
-        FIREBASE_CLI_TOKEN: ${{ secrets.FIREBASE_CLI_TOKEN }} 
-      run:
+        FIREBASE_CLI_TOKEN: ${{ secrets.FIREBASE_CLI_TOKEN }}
+      run: |
         bundle exec fastlane android firebase_distribution
-      working-directory: android  
+      working-directory: android
