--- a/github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
+++ b/github/workflows/android_fastlane_firebase_app_distribution_workflow.yaml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   distribute_to_firebase:
+    if: github.event.pull_request.merged
     runs-on: ubuntu-latest
     steps:
     - name: Checkout my repo code
